Bug 158304 - Cross-fade dialogs settings are not loaded after LO restart
Summary: Cross-fade dialogs settings are not loaded after LO restart
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0
Keywords: easyHack
Depends on:
Blocks: Dialog-Remember-Settings
  Show dependency treegraph
 
Reported: 2023-11-21 21:48 UTC by Gabor Kelemen (Collabora)
Modified: 2024-04-26 08:06 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example draw file with two shapes (10.22 KB, application/vnd.oasis.opendocument.graphics)
2023-11-21 21:48 UTC, Gabor Kelemen (Collabora)
Details
Settings changed in the dialog (59.09 KB, image/png)
2023-11-21 21:49 UTC, Gabor Kelemen (Collabora)
Details
Changes are not remembered (65.99 KB, image/png)
2023-11-21 21:49 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-11-21 21:48:35 UTC
Created attachment 190945 [details]
Example draw file with two shapes

Draw has a Cross-fading feature for shapes. This has some settings in its dialog, but these are not saved / loaded properly between different runs of Draw, despite the code making efforts to save them.

1. Open the attached Draw file, it has two drawing shapes.
2. Select both by clicking and pressing Shift
3. Go to Shape - Cross-fading menu.
4. Try to change the settings, change the Increments value, uncheck the boxes. 5. Press OK. The cross-fading is executed fine.
6. Close LO without saving the document, then reload.
7. Do steps 2-3.
-> The settings you changed are reset to the default values.

Code pointers:
sd/source/ui/dlg/morphdlg.cxx
This tries to load/save settings as a SotStorageStream object, this is an obsolete approach
officecfg/registry/schema/org/openoffice/Office/Draw.xcs
-> CrossFading group of settings

(I found this issue because my bin/find-unused-configkeys.sh script reported this group as unused.)

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a91892ec4942fc875820ea02dfbe74e986548142
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2023-11-21 21:49:19 UTC
Created attachment 190947 [details]
Settings changed in the dialog
Comment 2 Gabor Kelemen (Collabora) 2023-11-21 21:49:37 UTC
Created attachment 190948 [details]
Changes are not remembered
Comment 3 Buovjaga 2023-11-30 12:56:38 UTC
Repro

Arch Linux 64-bit, X11
Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: baf36dc7caa10365f3dda87bc2dd6e85e0333e98
CPU threads: 8; OS: Linux 6.6; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 30 November 2023
Comment 4 Gabor Kelemen (Collabora) 2024-04-25 14:54:31 UTC
Proposed patch: https://gerrit.libreoffice.org/c/core/+/166633
Comment 5 Commit Notification 2024-04-26 07:41:35 UTC
Gabor Kelemen committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7bd190858f5f044225eaad03ef41f736bfbbd8da

tdf#158304 Store Cross-Fading dialog settings correctly

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.