tdf#158304 Store Cross-Fading dialog settings correctly

Change-Id: I3b8de3590a83def6fd6c77a504c69085dc2f0361
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166633
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Jenkins